- Clocks continue running when user goes back to main menu (design choice; which is better?)
- Now saves color settings that the user changes. Still need to debug this functionality more thoroughly.
- Created module ConfigManager to manage creation and modification of usersettings.ini
- Changed values in storedsettings.py to pull from ConfigManager
8-14-20:
- Added pomo time settings to settings menu (still need to style, label, validate, etc.)
- Pomo time settings are now saved
8-16-20:
- Organized settings menu
- Color changing buttons now are just squares of color
- Fixed bug when changing colors where you open color picker and immediately cancel/x out
- Fixed how configmanager saves pomo timer settings
8-17-20:
- Bound start/pause for open timer to enter
- Created TaskDAO (and task db of course)
- Created TaskGUI (debug further)
8-18-20:
- Fixed bug in pomo where left button would say "skip" when break timer finished
8-22-20:
- Created method to record the time spent on an activity in seconds.
- fixed stopwatch bug
- added autosave to settings
- Created Session class
- Created SessionDAO class
- Implemented saving sessions to the database
- Added autosave setting
- Added dropdown for selecting current task to main menu
8-23-20:
- Started stylizing widgets (settings and mainmenu done)
- started on window to display previous sessions, much left to do.
8-24-20:
- Added a debug setting to usersettings, configmanager, and mainmenu
- Added a WAIT value to storedsettings for above debug functionality
- Fixed time formatting in session class and in messageboxes in timer classes
- Fixed clocks clearing display after answering cancel prompt. Now clear after answering save prompt
8-25-20:
- Fixed pomo bug where cancelling a work session would still switch to break
8-26-20:
- Started on formatting DisplayData display
- Added radio buttons for choosing display type
- Added method to Session for getting formatted info